--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -29,7 +29,7 @@ We are pleased to submit a revised version of our manuscript, "Thermal sensitivi
 
 - We have brought in an additional author, Thomas Buckley, to round out the expertise of the author team and help address some of the reviewer comments (particularly R2).
 
-- ...
+- Revised three figures (Figs. 1-3) based on reviewer comments 
 
 Regarding production of the figures, below are some specific criteria:
 <!--To ensure rapid handling of your manuscript we would be grateful if you could confirm, in the cover letter to the Editor, whether or not there are any important elements of the figures that need to be retained (eg. colours used, plant species drawn, layout and spacing, symbols, etc) and if you have specific instructions that you would like the illustrator to take on board.-->
@@ -302,7 +302,7 @@ line128: '… but understory leaf area density is often relatively high in the u
 line140 'Light … decreases from the canopy top to the forest floor' – why isn’t foliage clumping mentioned here amongst the other factors?
 
 **We added foliage clumping into the list of factors influencing vertical light gradient here:**
-**"Light, specifically the proportion of incident light and photosynthetically active radiation (PAR), decreases from the canopy top to the forest floor. The profile shape of this light is modified by leaf area density, leaf clumping, canopy height, and canopy structure across species and forest types (Fig. 2a-d, Supporting Information Figure S1, Koike et al., 2001)."** 
+**"Light, specifically the proportion of incident light and photosynthetically active radiation (PAR), decreases from the canopy top to the forest floor. The profile shape of light is modified by leaf area density, leaf clumping, canopy height, and canopy structure across species and forest types (Fig. 2a-d, Supporting Information Figure S1, Koike et al., 2001)."** 
 
 line148: 'Variability in the light environment decreases with height' – I don’t see this except perhaps at z = 0 and even so seems tenuous. Explain.
 
@@ -355,12 +355,15 @@ Figure 3: Humid and drought is not a straight comparison. Well-watered vs. droug
 
 Figure 3: why not put a point that represents the leaf values for top and bottom of the canopy?
 
+*https://github.com/EcoClimLab/vertical-thermal-review/issues/84* 
+
 Table 1: What is here is not leaf gas exchange, and it seems that the authors have repeated the caption for Table 2 in error. Please fix this. Also don’t capitalise ‘leaf’.
 
 **Done**
-*Need to add the updated table to .rmd*
 
 Lines 354-372 on sun versus shade leaves and Table 1. Most of what is here was known a long time ago, say in Vogel 1968 (cited) and Boardman 1977 (not cited) but pertains to within-canopy rather than between sun and shade plants. I would suggest that this would be improved if the authors started from these old studies that most readers will recognise, and state how we’ve advanced in understanding and progressed toward within-canopy work rather than between sun-and-shade habitats.
+
+*(see Lawren's comments in google doc)*
 
 line382: 'more frequent stomatal closure higher' is awkward and does not follow the comparative. Higher than what?
 
@@ -377,7 +380,7 @@ line404-405: A cause-effect for an earlier, juvenile understory tree leaf-out is
 
 line475: 'because water supply often cannot meet the demands incurred …'. How do we know how frequent this is? Evidence?
 
-**We have added four references showing that stomatal conductance is often limited by imbalance of water supply and evaporative demand for leaves in more elevated or more sunlit canopy positions [@yoderEvidenceReducedPhotosynthetic1994; @kochLimitsTreeHeight2004; @sillettIncreasingWoodProduction2010].**
+**We have added references showing that stomatal conductance is often limited by imbalance of water supply and evaporative demand for leaves in more elevated or more sunlit canopy positions [@yoderEvidenceReducedPhotosynthetic1994; @kochLimitsTreeHeight2004; @sillettIncreasingWoodProduction2010].**
 
 line478: 'intracellular CO_2' needs to be fixed.
 
@@ -393,7 +396,7 @@ line481 'is maximized' or is maximal? Please correct.
 
 line485-487: It seems that VPD and its effect on gs is ignored here. Please clarify? The well-known stomatal closure at high VPD alone would mean higher Tair would decrease gs in the upper canopy (not 'canopy leaves' as stated) compared to the lower canopy. See Grossiord et al. (2020) Tansley Review. VPD only gets mentioned in the section on photosynthesis (l. 496). Please do so earlier.
 
-**We agree, and have modified the text in this section to emphasize the role of VPD in driving stomatal closure in sun leaves (new text underlined): “However, ~~because~~ water supply often cannot meet the demands incurred by the high irradiance and $g_b$ experienced by sun leaves ***with fully open stomata, because of height-related constraints on water transport (e.g., Yoder et al. 1994, Koch et al. 2004, Sillett et al 2010) and/or because of increased evaporative demand (VPD) caused by leaf warming in sunlit canopy locations (Buckley et al. 2014)***. As a result, midday stomatal depression is more prevalent in sun leaves than shade leaves in closed-canopy forests (Table 2), which drives the lower intracellular CO2 and carbon isotope discrimination discussed in section 3.1 (Table 1).  Stomatal depression reduces transpirational cooling, thus amplifying the warming of sun leaves by high radiation loads ~~In sun leaves, Tleaf thus further increases due to the lack of transpirational cooling.~~” We have also added the phrase ***“(driven by increased VPD)”***after “sun leaves in the upper canopy show a stronger decrease in gs in response to rising Tair”, and clarified that “high Tair should decrease gs of ***upper canopy***leaves”.**
+**We agree, and have modified the text in this section to emphasize the role of VPD in driving stomatal closure in sun leaves (new text italicized): “However, ~~because~~ water supply often cannot meet the demands incurred by the high irradiance and $g_b$ experienced by sun leaves ***with fully open stomata, because of height-related constraints on water transport (e.g., Yoder et al. 1994, Koch et al. 2004, Sillett et al 2010) and/or because of increased evaporative demand (VPD) caused by leaf warming in sunlit canopy locations (Buckley et al. 2014)***. As a result, midday stomatal depression is more prevalent in sun leaves than shade leaves in closed-canopy forests (Table 2), which drives the lower intracellular CO2 and carbon isotope discrimination discussed in section 3.1 (Table 1).  Stomatal depression reduces transpirational cooling, thus amplifying the warming of sun leaves by high radiation loads ~~In sun leaves, Tleaf thus further increases due to the lack of transpirational cooling.~~” We have also added the phrase ***“(driven by increased VPD)”***after “sun leaves in the upper canopy show a stronger decrease in gs in response to rising Tair”, and clarified that “high Tair should decrease gs of ***upper canopy***leaves”.**
 
 line510-525: There is a long discussion about whether Topt for gas exchange or its components differs between overstory and understory. Here the authors aren’t clear, but such a comparison only matters if the same species is measured in different canopy layers.
 
