--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -163,21 +163,19 @@ Most DGCMs represent a vertical variability in the main physiological parameters
 
 **Thank you for noting the need to clarify this point. We have added a passage at the end of the sentence that mentions big-leaf models to clarify that they do indeed account for assumed vertical profiles: “...to big-leaf models that reduce 3D vegetation structure across the entire biosphere into a single vegetation layer, ***implicitly capturing vertical profiles in light, photosynthetic capacity and other features by assuming those profiles are exponential and thus can be integrated analytically…”***(added text italicized here). We also deleted the clause that occurred two sentences later, that had said about big-leaf models: “...which do not represent any vertical stratification…”**
 
-**In addition, we also added a paragraph that more clearly describes the methods used for light competition that enables the type of variation in physiological traits that you described (e.g., Vcmax).**
+**In addition, we also added a paragraph that more clearly describes the methods used for light competition that enables the type of variation in physiological traits that you described (e.g., Vcmax):**
 
 - **Owing to differences in the representation of forest vertical strata, DVGMs vary in their ability to incorporate vertical variation in leaf traits and physiological processes. In general, however, this variation is accounted for via light competition. Models partition incoming radiation and radiation within the forest vertical profile (i.e., direct vs. diffuse light) using radiative transfer models or a system of two coupled ordinary differential equations, referred to as a two-stream approximation [@sellersCanopyReflectancePhotosynthesis1985; @fisherVegetationDemographicsEarth2018a]. Using the latter method, single canopy layers are divided into sun and shade fractions (e.g., CLM), while models with multiple vegetative layers can analytically solve the 2-stream approximation for each layer. Thus, even in single-layer models, key physiological parameters like $V_{cmax}$ and $J_{max}$ vary, decreasing with increasing LAI, or lower light conditions [e.g., @krinnerDynamicGlobalVegetation2005a].** 
 
 
 To me, an important remark is that most gradients in DGVMs are prescribed. More data would of course help to better understand and quantify the gradients, and to compare them with model representations (part ‘Scaling in situ data with remote sensing’ of your paper). But in the end, the mechanisms explaining those gradients are still not really known, in the sense that they can’t be efficiently modeled prognostically. This is due to the multiple sources of parameters variation that you highlighted (light environment, temperature, hydraulic, …). A lot of research is done using optimality frameworks to try and predict the photosynthetic and other vegetation traits based on environmental variables. See for example (Ali et al., 2016; Buckley, 2021). A question I have, is if including more precise cohorts as you suggest, would improve the accuracy of models given all the uncertainty in the parametrization of their traits.
 
-**We agree that there is a recognition in the modeling community that we do need improved understanding of the mechanisms to better represent the level of vertical variation desired by some. We added the following sentence to acknowledge that (LXX-XX): " ... ". We also removed some of the language that emphasizes cohort based models as the only or best way to do this.** 
+**We agree that there is a recognition in the modeling community that we do need improved understanding of the mechanisms to better represent the level of vertical variation desired by some. We added the following sentence to acknowledge that: "However, doing so will require improved understanding of the mechanisms controlling vertical gradients.". We also removed some of the language that emphasizes cohort based models as the only or best way to do this.**
 
 **We note that addressing the question poosed here is essentially impossible to answer without doing the research. The value of different modeling approaches is difficult to judge a priori.**
 
 
 Table S3: Including the words vertical or vertical gradient could have been useful.
-
-*(Nidhi, what do you think of the following?)*
 
 **Thanks for the suggestion. We agree, but at the same time are confident that the search terms we used covered the majority of the relevant literature.  Adding additional search terms could always turn up additional papers, but we feel that we have reached a point of diminishing returns, and unfortunately don't have time to expand the search (lead author has moved on from the institution where she performed the work to a PhD program).** 
 
