--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -248,9 +248,9 @@ Certainly, a discussion with a micrometeorologist or atmospheric scientist, if n
 
 **We had also used the words “buffering”, "buffer", or "buffered" in a different context, where the intention was to describe how canopy attenuation (of radiation and wind) can reduce daily extremes of temperature in the lower canopy and understory. We have modified the text in those places to clarify, generally reducing use of the terms. However, the term has been widely used in recent publications on this theme, and we therefore did not feel it was necessary to eliminate it's usage. Examples of modified sentences include the following:** 
 
-- **“Canopy foliage acts as the primary physical barrier between the atmosphere and the forest floor, buffering multiple aspects of the understory conditions ***from large fluctuations in conditions above the canopy”; (line xxx)***(new text underlined)**
+- **“Canopy foliage acts as the primary physical barrier between the atmosphere and the forest floor, buffering multiple aspects of the understory conditions ***from large fluctuations in conditions above the canopy”; (line xxx)***(new text italicized)**
 - **“Air temperature ($T_{air}$) often shows little variation across the vertical gradient, but under certain circumstances, ***attenuation of radiation and vertical transport of sensible heat by the canopy can buffer the lower canopy and understory from large diurnal swings in air temperature***~~it can be significantly buffered by forest canopies~~"; (line xxx)**
-- **“Typically, ***diurnal temperature range is smaller beneath dense canopies than above, resulting in,***~~dense canopies buffer understories from high maximum Tair more than open canopies, i.e., dense canopy understories can have~~cooler maximum daytime Tair and warmer nighttime minimum Tair than open canopy understories or nearby clearings.” (line xxx)**
+- **“Typically, ***diurnal temperature range is smaller beneath dense canopies than above, resulting in,***~~dense canopies buffer understories from high maximum $T_{air}$ more than open canopies, i.e., dense canopy understories can have~~cooler maximum daytime $T_{air}$ and warmer nighttime minimum Tair than open canopy understories or nearby clearings.” (line xxx)**
 
 I was eager to see the part of the manuscript about photoprotection and also its relationship to heat damage. The opening sentence (l. 384) was obvious to the point of being painful to read.  Of course photoprotection is higher in the upper canopy: radiation levels are higher! Can this first sentence get revised to increase information content? This is one of the more exciting topics of the review, yet is handled only in a cursory fashion. If the authors could manage a bit more discussion of this topic it would be useful – instead they move (in the same paragraph) to VOC emissions, something I view as a separate capability of some plants. This is also confused in Fig. 1 where VAZ and VOC are placed on the same line. I’d like to see a more complete discussion of photoprotection and heat dissipation by NPQ first, and a separate paragraph about VOC. Also, there is nothing about critical temperature until late in the manuscript even though the authors skirt the issue in their text about photoprotection. This kind of thermal sensitivity is different from gas exchange (the section where the text about Tcrit occurs, l. 530-555), and should have been discussed earlier in the manuscript.
 
@@ -405,7 +405,7 @@ line510-525: There is a long discussion about whether Topt for gas exchange or i
 
 **Thank you for noting this, we revised the sentence to make it clear, where we specify that majority of the studies are within species between sun and shade leaves of the same trees. @carterExperimentalWarmingTropical2021 is one of the only studies comparing between overstory and understory.**
 
-- **We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves, and existing studies, that are predominately within species between sun and shade leaves of the same trees reveal no pronounced overall trend with height in the optimum temperatures for photosynthetic processes**
+- **We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves, and existing studies, which  compare sun and shade leaves of the same trees, reveal no pronounced overall trend with height in the optimum temperatures for photosynthetic processes**
 
 - **We also made similar changes specifying within canopy sun and shade from lines (xx-xx)**
 
