--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -259,7 +259,7 @@ However, the opposite trend was observed for a lone tree surrounded by grass in 
 
 Leaf traits shape $T_{leaf}$, leaf metabolism, and leaf thermal sensitivity across forest vertical strata [@michaletzPlantThermoregulationEnergetics2015a;@michaletzEnergeticCarbonEconomic2016a;  @zwienieckiHydraulicLimitationsImposed2004].
 Leaf morphology adjusts to the previously experienced microenvironment during leaf formation in buds, and also during ongoing leaf expansion [@zwienieckiHydraulicLimitationsImposed2004], and the ratio of far red to red light and associated water demands determine the differentiation of traits of sun and shade leaves [@casasSunShadeLeaves2011; @zwienieckiHydraulicLimitationsImposed2004; @keenanGlobalLeafTrait2016]. 
-This dichotomy in leaves is observed along the vertical gradient where upper (or outer) canopy leaves vary dramatically from canopy-interior and understory leaves due to the differences in biophysical conditions [Fig. `r fig_NEON_vertical`, @binLeafTraitExpression2022], and also because of differences in biological conditions such as tree size and height [@binLeafTraitExpression2022]. 
+Therefore, a continuum of sun and shade leaves are observed throughout the vertical gradient where upper (or outer) canopy leaves vary dramatically from canopy-interior and understory leaves due to the differences in biophysical conditions [Fig. `r fig_NEON_vertical`, @binLeafTraitExpression2022], and also because of differences in biological conditions such as tree size and height [@binLeafTraitExpression2022]. 
 
 Across the vertical gradient, traits vary (1) across sun and shade leaves within individuals, (2) across canopy and understory individuals of the same species, and (3) across canopy and understory species. 
 The majority of studies characterizing variation in leaf traits or metabolism examine intraspecific patterns (categories 1 and 2), which are therefore the main focus of this review (Table `r table_leaf_traits`).
